--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,10 @@ allprojects {
     }
 
     ext {
-        androidSupportVersion = "25.3.0"
+//        androidSupportVersion = "25.3.0"
+        androidSupportVersion = "25.2.0"
+
+
 
     }
 }
