--- a/XYZReader/build.gradle
+++ b/XYZReader/build.gradle
@@ -31,7 +31,11 @@ dependencies {
     compile "com.android.support:recyclerview-v7:$androidSupportVersion"
     compile "com.android.support:cardview-v7:$androidSupportVersion"
     compile "com.android.support:design:$androidSupportVersion"
+    compile 'com.github.bumptech.glide:glide:4.0.0-RC0'
+
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.0.0-RC0'
 
     compile 'com.squareup.okhttp3:okhttp:3.1.2'
     compile files('libs/volley.jar')
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
 }
